syntax = "proto3";

package example.v1;

import "google/protobuf/timestamp.proto";

// Person represents a contact in an address book
message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;

  enum PhoneType {
    PHONE_TYPE_UNSPECIFIED = 0;
    MOBILE = 1;
    HOME = 2;
    WORK = 3;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;

  google.protobuf.Timestamp last_updated = 5;
}

// AddressBook contains a collection of people
message AddressBook {
  repeated Person people = 1;
}
